fix(main board) prevent overflow

--- a/styles/_game.scss
+++ b/styles/_game.scss
@@ -1,8 +1,8 @@
 .game-container {
   position: fixed;
-  width: 1700px;
-  height: 977px;
-  overflow: scroll;
+  width: 100%;
+  height: 100vh;
+  min-width: 1700px;
   display: flex;
   align-content: space-around;
   border: 8px solid black;
